--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^6.7.1",
+    "@google-cloud/text-to-speech": "^6.0.1",
     "@google-cloud/translate": "^8.5.1",
-    "next": "15.1.6",
+    "googleapis": "^148.0.0",
+    "next": "^15.2.4",
     "openai": "^4.80.1",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
